--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <nav>
@@ -17,5 +18,20 @@
     <a href="#" class="btn-hot">Get a quote</a> 
   </div>
 </nav>
+
+<section class="container">
+
+    <div class="container-card">
+        <p class="container-card--content">Hello World</p>
+    </div>
+      <div class="container-card">
+        <p class="container-card--content">Hello World</p>
+    </div>
+      <div class="container-card">
+        <p class="container-card--content">Hello World</p>
+    </div>
+ 
+
+</section>
 </body>
 </html>
